Corrijo apuntes y soluciones de PyE

--- a/3 Ano/Probabilidad y Estadistica/Distribuciones.lyx
+++ b/3 Ano/Probabilidad y Estadistica/Distribuciones.lyx
@@ -92261,7 +92261,7 @@ Positivas
 \begin_inset Text
 
 \begin_layout Plain Layout
-\begin_inset Formula $-0.00$
+\begin_inset Formula $+0.00$
 \end_inset
 
 
@@ -92273,7 +92273,7 @@ Positivas
 \begin_inset Text
 
 \begin_layout Plain Layout
-\begin_inset Formula $-0.01$
+\begin_inset Formula $+0.01$
 \end_inset
 
 
@@ -92285,7 +92285,7 @@ Positivas
 \begin_inset Text
 
 \begin_layout Plain Layout
-\begin_inset Formula $-0.02$
+\begin_inset Formula $+0.02$
 \end_inset
 
 
@@ -92297,7 +92297,7 @@ Positivas
 \begin_inset Text
 
 \begin_layout Plain Layout
-\begin_inset Formula $-0.03$
+\begin_inset Formula $+0.03$
 \end_inset
 
 
@@ -92309,7 +92309,7 @@ Positivas
 \begin_inset Text
 
 \begin_layout Plain Layout
-\begin_inset Formula $-0.04$
+\begin_inset Formula $+0.04$
 \end_inset
 
 
@@ -92321,7 +92321,7 @@ Positivas
 \begin_inset Text
 
 \begin_layout Plain Layout
-\begin_inset Formula $-0.05$
+\begin_inset Formula $+0.05$
 \end_inset
 
 
@@ -92333,7 +92333,7 @@ Positivas
 \begin_inset Text
 
 \begin_layout Plain Layout
-\begin_inset Formula $-0.06$
+\begin_inset Formula $+0.06$
 \end_inset
 
 
@@ -92345,7 +92345,7 @@ Positivas
 \begin_inset Text
 
 \begin_layout Plain Layout
-\begin_inset Formula $-0.07$
+\begin_inset Formula $+0.07$
 \end_inset
 
 
@@ -92357,7 +92357,7 @@ Positivas
 \begin_inset Text
 
 \begin_layout Plain Layout
-\begin_inset Formula $-0.08$
+\begin_inset Formula $+0.08$
 \end_inset
 
 
@@ -92369,7 +92369,7 @@ Positivas
 \begin_inset Text
 
 \begin_layout Plain Layout
-\begin_inset Formula $-0.09$
+\begin_inset Formula $+0.09$
 \end_inset
 
 
