--- a/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 6.lyx
+++ b/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 6.lyx
@@ -7,6 +7,8 @@
 \textclass article
 \begin_preamble
 \usepackage{pgfplots}
+\usetikzlibrary{patterns}
+\usepgfplotslibrary{colormaps,fillbetween}
 \end_preamble
 \use_default_options true
 \begin_modules
@@ -699,7 +701,17 @@ Falso pues
 \end_layout
 
 \begin_layout Itemize
-COMPLETAR
+\begin_inset Formula $COV\left(X,Y\right)=E\left(XY\right)-E\left(X\right)E\left(Y\right)=COMPLETAR$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $\rho_{XY}=\frac{COV\left(X,Y\right)}{\sqrt{V\left(X\right)V\left(Y\right)}}=COMPLETAR$
+\end_inset
+
+.
 \end_layout
 
 \end_deeper
@@ -977,13 +989,68 @@ Soluciones
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset space ~
+\end_inset
+
+
 \end_layout
 
+\begin_deeper
+\begin_layout Itemize
+\begin_inset Formula $E\left(X\right)=-1\cdot\left(2d+c\right)+0+\left(2d+c\right)=0=E\left(Y\right)$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $E\left(XY\right)=1\cdot d+0-d+0+0+0-d+d=0$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $\rho_{XY}=\frac{COV\left(X,Y\right)}{\sqrt{V\left(X\right)V\left(Y\right)}}=\frac{E\left(XY\right)-E\left(X\right)E\left(Y\right)}{\sqrt{V\left(X\right)V\left(Y\right)}}=0$
+\end_inset
+
+.
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
+\end_deeper
 \begin_layout Enumerate
-COMPLETAR.
+Supongamos que son independientes.
+ Luego:
 \end_layout
 
+\begin_deeper
+\begin_layout Itemize
+\begin_inset Formula $P\left(0,0\right)=0=P_{X}\left(0\right)P_{Y}\left(0\right)=4c\iff c=0$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $P\left(1,1\right)=d=P_{X}\left(1\right)P_{Y}\left(1\right)=4d\iff d=0$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+Luego 
+\begin_inset Formula $XY$
+\end_inset
+
+ no es una distribución de probabilidad.
+\end_layout
+
+\end_deeper
 \end_deeper
 \begin_layout Enumerate
 Se debe seleccionar un comité de tres personas elegidas al azar de un grupo
@@ -1835,14 +1902,419 @@ Calcule el coeficiente de correlación entre
 Soluciones
 \end_layout
 
-\begin_layout Enumerate
-COMPLETAR.
+\begin_layout Standard
+\align center
+\begin_inset Preview
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+begin{tikzpicture}
+\end_layout
+
+\begin_layout Plain Layout
+
+  
+\backslash
+begin{axis}[axis lines=middle, samples=100, thick, domain=0:2, legend pos=
+ north west, axis on top, axis equal]
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addplot+[forget plot, mark=none, draw=none, domain=0:2, fill=gray!20]{x}
+ 
+\backslash
+closedcycle;
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addplot+[forget plot, mark=none, draw=none, domain=0:2, fill=gray!20]{-x}
+ 
+\backslash
+closedcycle;
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addplot+[no marks] {x};
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addlegendentry{$y=x$}
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addplot+[no marks] {-x};
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addlegendentry{$y=-x$}
+\end_layout
+
+\begin_layout Plain Layout
+
+  
+\backslash
+end{axis}
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\begin_inset Preview
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+begin{tikzpicture}
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+begin{axis}[xlabel=$x$, ylabel=$y$, small]
+\end_layout
+
+\begin_layout Plain Layout
+
+        
+\backslash
+addplot3[surf, shader=flat, samples=15, domain =0:2,domain y=-2:2] {(1/8)*x*(x-y
+)};
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+end{axis}
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset Formula ${\displaystyle \intop_{0}^{2}\intop_{-x}^{x}}kx\left(x-y\right)\,dy\,dx=k{\displaystyle \intop_{0}^{2}x\intop_{-x}^{x}}\left(x-y\right)\,dy\,dx=k{\displaystyle \intop_{0}^{2}}x\left({\displaystyle \intop_{-x}^{x}}x\,dy-{\displaystyle \intop_{-x}^{x}}y\,dy\right)\,dx=$
+\end_inset
+
+
 \end_layout
 
+\begin_deeper
+\begin_layout Standard
+\begin_inset Formula $=k{\displaystyle \intop_{0}^{2}}x\left(x\cdot\left.y\right|_{-x}^{x}-\left.\frac{y^{2}}{2}\right|_{-x}^{x}\right)\,dx=k{\displaystyle \intop_{0}^{2}}x\left(2x^{2}-0\right)\,dx=k{\displaystyle \intop_{0}^{2}}x2x^{2}\,dx=$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula $=k{\displaystyle \intop_{0}^{2}}2x^{3}=2k\left.\frac{x^{4}}{4}\right|_{0}^{2}=2k4=1\iff k=\frac{1}{8}$
+\end_inset
+
+.
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
+\end_deeper
+\begin_layout Enumerate
+\begin_inset space ~
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Standard
+\align center
+\begin_inset Preview
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+begin{tikzpicture}
+\end_layout
+
+\begin_layout Plain Layout
+
+  
+\backslash
+begin{axis}[axis lines=middle, samples=100, thick, domain=0:2, legend pos=
+ north east, axis on top, axis equal]
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addplot+[forget plot, mark=none, draw=none, domain=0:2, pattern=vertical
+ lines]{x} 
+\backslash
+closedcycle;
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addplot+[forget plot, mark=none, draw=none, domain=0:2, pattern=vertical
+ lines]{-x} 
+\backslash
+closedcycle;
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addplot+[no marks] {x};
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addlegendentry{$y=x$}
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addplot+[no marks] {-x};
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addlegendentry{$y=-x$}
+\end_layout
+
+\begin_layout Plain Layout
+
+  
+\backslash
+end{axis}
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $f_{X}\left(x\right)=\begin{cases}
+{\displaystyle \intop_{-x}^{x}\frac{1}{8}}x\left(x-y\right)\,dy & 0<x<2\\
+0 & \text{en otro caso}
+\end{cases}=\begin{cases}
+\frac{1}{4}x^{3} & 0<x<2\\
+0 & \text{en otro caso}
+\end{cases}$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+begin{tikzpicture}
+\end_layout
+
+\begin_layout Plain Layout
+
+  
+\backslash
+begin{axis}[axis lines=middle, samples=100, thick, domain=0:2, legend pos=
+ north east, axis on top, axis equal]
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addplot+[forget plot, mark=none, draw=none, domain=0:2, pattern=horizontal
+ lines]{x} 
+\backslash
+closedcycle;
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addplot+[forget plot, mark=none, draw=none, domain=0:2, pattern=horizontal
+ lines]{-x} 
+\backslash
+closedcycle;
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addplot+[no marks] {x};
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addlegendentry{$y=x$}
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addplot+[no marks] {-x};
+\end_layout
+
+\begin_layout Plain Layout
+
+    
+\backslash
+addlegendentry{$y=-x$}
+\end_layout
+
+\begin_layout Plain Layout
+
+  
+\backslash
+end{axis}
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $-2<y<0\iff-y<x<2$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $0<y<2\iff y<x<2$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $f_{Y}\left(y\right)=\begin{cases}
+{\displaystyle \intop_{-y}^{2}\frac{1}{8}x\left(x-y\right)\,dx} & -2<y<0\\
+{\displaystyle \intop_{y}^{2}}\frac{1}{8}x\left(x-y\right)\,dx & 0<y<2\\
+0 & \text{en otro caso}
+\end{cases}=\begin{cases}
+\frac{5y^{3}-12y+16}{48} & -2<y<0\\
+\frac{y^{3}-12y+16}{48} & 0<y<2\\
+0 & \text{en otro caso}
+\end{cases}$
+\end_inset
+
+
+\end_layout
+
+\end_deeper
 \begin_layout Enumerate
 COMPLETAR.
 \end_layout
